# date-profiler

./: .dev.env  .gcloudignore  .gitignore  README.md  app.yaml  cron.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yaml
content_generator/: autocomplete.py  env_config.py  gcs_utils.py  utils.py
data/: SOURCES
data/date_profiles/: titles.json  titles.txt
data/date_profiles/letters/: date_profile1.md  date_profile10.md  date_profile11.md  date_profile12.md  date_profile13.md  date_profile14.md  date_profile15.md  date_profile16.md  date_profile17.md  date_profile18.md  date_profile19.md  date_profile2.md  date_profile20.md  date_profile21.md  date_profile22.md  date_profile23.md  date_profile24.md  date_profile25.md  date_profile26.md  date_profile27.md  date_profile28.md  date_profile29.md  date_profile3.md  date_profile30.md  date_profile31.md  date_profile32.md  date_profile33.md  date_profile34.md  date_profile35.md  date_profile36.md  date_profile37.md  date_profile38.md  date_profile39.md  date_profile4.md  date_profile40.md  date_profile41.md  date_profile42.md  date_profile43.md  date_profile44.md  date_profile45.md  (+31 more)
data/date_profiles/metadata/: date_profile1.txt  date_profile10.txt  date_profile11.txt  (+68 more)
extras/: cron.yaml
src/: __init__.py  cache.py  generator.py  utils.py
static/: style.css
static/temp/: profile_base.xcf  profile_filled.xcf  profile_filled_short.xcf
templates/: index.html
test/: test_cache.py  test_generator.py
tests/: test_autocomplete.py  test_utils.py
tools/: helpers.py
(+341 files in other folders)
